Use large macos VMS

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -544,7 +544,7 @@ jobs:
       TARGET_ARCH: x64
     macos:
         xcode: "9.0"
-    resource_class: xlarge
+    resource_class: large
     steps:
       - checkout
       - run:
@@ -643,7 +643,7 @@ jobs:
       MAS_BUILD: 1
     macos:
         xcode: "9.0"
-    resource_class: xlarge
+    resource_class: large
     steps:
       - checkout
       - run:
